# macronome

./: .dockerignore  .easignore  .gitignore  ACCOUNT_DELETION.md  Dockerfile  PRIVACY_POLICY.md  README.md  docker-compose.yml  dump.rdb  final-worker-def.json  main.py  make_worker_def.py  plan.md  pyproject.toml  task-def.json  task-overrides.json  worker-task-def.json
.cursor/plans/: mobile-app-file-structure-17a28e7c.plan.md
.cursor/rules/: python-conventions.mdc
apps/mobile/: .easignore  .editorconfig  App.tsx  README.md  app.config.ts  babel.config.js  eas.json  package-lock.json  package.json
apps/mobile/src/contexts/: AuthContext.tsx
experiments/notebooks/: USDA.ipynb  meal_recommender.ipynb  mobile_assets.ipynb  pantry_detector.ipynb  pantry_detector.py
experiments/scripts/: send_event.py  train_usda_matcher.py
experiments/scripts/events/: chat_workflow_constraint.json  chat_workflow_general.json  chat_workflow_start_recommendation_1.json  meal_recommendation_1.json  meal_recommendation_2.json  meal_recommender.json  pantry_scanner.json
experiments/utils/: event_loader.py  visualize_workflow.py
ml/pantry_scanner/: service.py
ml/pantry_scanner/pipeline/: cropper.py  food_classifier.py  pantry_detector.py
ml/prompts/: food_query.j2
ml/shared/llm/: base.py  config.py  vision_llm.py
ml/shared/mlflow/: model_registry.py
ml/training/pantry_detector/: config.py  train.py
scripts/: combine_raw_datasets.py
src/macronome/: settings.py
src/macronome/backend/: README.md  app.py  cache.py
src/macronome/data_engineering/: __init__.py  config.py
(+184 files in other folders)
