[project]
name = "macronome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celer>=0.7.4",
    "celery>=5.5.3",
    "clerk>=0.1.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.1",
    "huggingface>=0.0.1",
    "iprogress>=0.4",
    "ipykernel>=6.31.0",
    "kagglehub[hf-datasets]>=0.3.13",
    "litellm>=1.79.0",
    "marimo>=0.17.2",
    "mlflow>=3.1.4",
    "pillow>=11.3.0",
    "pyarrow>=21.0.0",
    "pydantic-ai>=1.14.1",
    "python-frontmatter>=1.0.0",
    "qdrant-client>=1.15.1",
    "redis>=7.0.1",
    "sentence-transformers>=5.1.2",
    "supabase>=2.24.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "ultralytics>=8.3.221",
]
